
Trying to import packages whose names begin with numbers would fail
because the vendor/release tags (and any other CVS tag) are forbidden
to begin with a number.  So the SCM::CVS module now strips leading
non-letter characters from tags.
----------------------------------------------------------------------
Wed Oct 11 17:53:35 2006                        Michael Jennings (mej)

Cosmetic tweak of debugging output.
----------------------------------------------------------------------
Thu Feb 22 20:48:32 2007                        Michael Jennings (mej)

Fixed horde3 package template.

Fixed permissions problem with chrooted builds.
----------------------------------------------------------------------
Tue Feb 27 16:30:05 2007                        Michael Jennings (mej)

Fix copyright years.
----------------------------------------------------------------------
Tue Feb 27 17:46:42 2007                        Michael Jennings (mej)

New tool -- pkgrepotool -- for managing package repositories.  Lots to
come here; it's nowhere near done yet. :)
----------------------------------------------------------------------
Tue Feb 27 19:54:19 2007                        Michael Jennings (mej)

More repo tool work.
----------------------------------------------------------------------
Wed Feb 28 14:18:18 2007                        Michael Jennings (mej)

pkgrepotool can now:
 - Scan local repositories, FTP, or HTTP
 - Find old, oldest, or newest packages, even across repositories
 - Spawn a pipe to CLU for version comparisons, falling back on
   built-in comparison routine if CLU is missing

Added support for extra headers to &fetch_url() along with progress
output suppression.
----------------------------------------------------------------------
Thu Mar  8 13:21:42 2007                        Michael Jennings (mej)

Add debugging to SRPM timestamp check.
----------------------------------------------------------------------